--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,7 +1,23 @@
 @import "bootstrap/dist/css/bootstrap";
 
-/*
+
 .navbar-brand{
-      font-size: 3rem;
+      font-size: 2rem;
 }
-*/
+
+.search-area {
+  padding-top: 50px
+}
+
+.no-right-padding {
+  padding-right: 0 !important;
+}
+
+.no-left-padding {
+  padding-left: 0 !important;
+}
+
+.results-block {
+  display: inline-block;
+
+}
